--- a/templates/market/base.html
+++ b/templates/market/base.html
@@ -3,10 +3,21 @@
 {% load rango_template_tags %}
 
 <html>
-	<head lang="en">
-		<meta charset="UTF-8" />
-		<title>Rango-{% block title_block %}How to Tango with Django!{% endblock %}</title>
-	</head>
-	<body>
-	</body>
+    <head>
+        <title>
+            MarketDays-
+            {% block title_block %}
+                items trading platform
+            {% endblock %}
+        </title>
+    </head>
+
+    <body>
+        <div>
+            {% block body_block %}
+            {% endblock %}
+        </div>
+        <hr />
+        
+    </body>
 </html>
