Fixed the templating issue. Need to change a setting, and also set up template tags. Now we can make templates to our hearts content! Have a look at the templatetags folder, I believe we can store a lot of the template rendering logic in this

--- a/templates/market/base.html
+++ b/templates/market/base.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %}
-{% load rango_template_tags %}
-
+{%load market_template_tags%}
 <html>
     <head>
         <title>
