Fixed Oles grave error========

--- a/templates/market/index.html
+++ b/templates/market/index.html
@@ -10,7 +10,7 @@
 		<h2>yo</h2>
 
 		<div>
-			<img src="{%static "images/indexMarketDays.jpg" %}" alt="Picture of ..." />
+			<img src="{%static "images/marketPicture.jpg" %}" alt="Picture of ..." />
 		</div>
 	</div>
 {% endblock %}
