Added the logout button, user.is_authenticated works

--- a/templates/market/base.html
+++ b/templates/market/base.html
@@ -19,8 +19,12 @@
         <hr />
         <div>
             <ul>
+		  {% if user.is_authenticated %}
+		  <li><a href="{% url 'auth_logout' %}?next=/market/">Logout</a></li>
+		  {% else %}
                   <li><a href="{% url 'auth_login' %}">Sign In</a></li>
                   <li><a href="{% url 'registration_register' %}">Sign Up</a></li>
+		  {% endif %}
                   <li><a href="{% url 'index' %}">Index</a></li>
             </ul>
         </div>
