what I wrote in the meeting at the SAWB today. NOTE: pseudocode

--- a/templates/market/base.html
+++ b/templates/market/base.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <div>
+        <divi id="jumbotron">
             {% block body_block %}
             {% endblock %}
         </div>
