--- a/templates/market/userProfile.html
+++ b/templates/market/userProfile.html
@@ -4,9 +4,31 @@
 	UserProfile
 {% endblock %}
 {% block body_block %}
-	<div>
+	<div class="jumbotron">
 		{% if userprofile_object %}
-		<h1>That's your market you, {{ userprofile_object.userName }}</h1>
+		<div class="page-header">
+		<h1>That's your market {{ userprofile_object.userName }}</h1>
+		</div>
+
+		<dl>
+			<dt><h3>First Name</h3></dt>
+			<dd>{{userprofile_object.firstName}}</dd>
+			<dt><h2>Last Name</h2></dt>
+			<dd>{{userprofile_object.lastName}}</dd>
+			<dt><h2>email</h2></dt>
+			<dd>{{userprofile_object.email}}</dd>
+			<dt><h2>phone number</h2></dt>
+			<dd>{{userprofile_object.userPhoneNumber}}</dd>
+			<dt><h2>Description</h2></dt>
+			<dd>{{userprofile_object.userDescription}}</dd>
+			<dt><h2>Interests</h2></dt>
+			<dd>{{userprofile_object.userInterests}}</dd>
+			<dt><h2>Date {{userprofile_object.firstName}} Joined</h2></dt>
+			<dd>{{userprofile_object.userStartDate}}</dd>
+		</dl>
+
+
+
 		{% else %}
 		<strong> This person doesn't exist! Should they? </strong>
 		{% endif %}
