--- a/templates/market/base.html
+++ b/templates/market/base.html
@@ -30,13 +30,14 @@
           </ul>
           {% if user.is_authenticated %}
           <ul class="nav navbar-nav navbar-right">
+            <!--Regarding the sessions we should create sth in user model to decide if we should display him your present session/ your messages/ or join sessions -->
             <li><a href="/market/userProfile/"><span class="glyphicon glyphicon-user"></span>Your Profile</a></li>
-            <li><a href="/accounts/logout/"><span class="glyphicon glyphicon-log-out"></span>Log Out</a></li>
+            <li><a href="{% url 'auth_logout' %}?next=/market/"><span class="glyphicon glyphicon-log-out"></span>Log Out</a></li>
           </ul>
           {% else %}
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/register/"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a href="/login/"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <li><a href="{% url 'registration_register' %}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="{% url 'auth_login' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
           </ul>
           {% endif %}
         </div>
