--- a/templates/market/index.html
+++ b/templates/market/index.html
@@ -3,19 +3,49 @@
 {% block title_block %}
 	Index
 {% endblock %}
-{% block body_block %}
-{% if user.is_authenticated %}
-	<div>
-		<h1 class="text-center"> Welcome back {{ user.username }}</h1>
-	</div>
-{% else %}
-	<div>
-		<h1 class="text-center">Welcome to MarketDays</h1>
-	</div>
-{% endif %}
-	<br/>
-	<div>
-		<img src="{%static "images/marketPicture.jpg" %}" class="img-responsive img-circle center-block" alt="Picture of ..." />
-	</div>
 
+{% block body_block %}
+<div>
+	{% if user.is_authenticated %}
+		<div>
+			<h1 class="display-3"> Welcome back {{ user.username }}</h1>
+		</div>
+	{% else %}
+		<div>
+			<h1 class="text-center">Welcome to MarketDays</h1>
+		</div>
+	{% endif %}
+		<br/>
+</div>
+<div class="container myCarousel">
+<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5500">
+	<ol class="carousel-indicators">
+		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		<li data-target="#myCarousel" data-slide-to="1"></li>
+	</ol>
+	<div class="carousel-inner" role="listbox" >
+		<div class="item active">
+			<img class="first-slide" src="{%static 'images/marketPicture.jpg' %}" alt="Picture of ..." />
+			{% if not user.is_authenticated %}
+				<div class="carousel-caption">
+				<h1>Join Us Now</h1>
+				<p>blablablablabla</p>
+				<p><a class="btn btn-lg btn-primary" href="{% url 'registration_register' %}" role="button">Sign up today</a></p>
+				</div>
+			{% endif %}
+		</div>
+		<div class="item">
+			<img class="second-slide" src="{%static 'images/marketPicture2.jpg' %}" alt="Picture of ..." />
+		</div>
+			
+		<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
+</div>
 {% endblock %}
