--- a/templates/market/base.html
+++ b/templates/market/base.html
@@ -4,7 +4,7 @@
 
 
 <html>
-    <head lang="eng">
+    <head lang="en">
         <title>
             MarketDays-
             {% block title_block %}
@@ -22,7 +22,7 @@
       <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>MarketDays</a>
+            <a class="navbar-brand" href='https://www.youtube.com/watch?v=Jr9R9NT9lk8'>MarketDays</a>
           </div>
           <ul class="nav navbar-nav">
             <li class="active"><a href="/market/">Home</a></li>
