--- a/templates/market/index.html
+++ b/templates/market/index.html
@@ -8,7 +8,7 @@
 <div>
 	{% if user.is_authenticated %}
 		<div>
-			<h1 class="display-3"> Welcome back {{ user.username }}</h1>
+			<h1 class="text-center"> Welcome back {{ user.username }}</h1>
 		</div>
 	{% else %}
 		<div>
@@ -18,34 +18,60 @@
 		<br/>
 </div>
 <div class="container myCarousel">
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5500">
-	<ol class="carousel-indicators">
-		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-		<li data-target="#myCarousel" data-slide-to="1"></li>
-	</ol>
-	<div class="carousel-inner" role="listbox" >
-		<div class="item active">
-			<img class="first-slide" src="{%static 'images/marketPicture.jpg' %}" alt="Picture of ..." />
-			{% if not user.is_authenticated %}
+	<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5500">
+		<ol class="carousel-indicators">
+			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#myCarousel" data-slide-to="1"></li>
+		</ol>
+		<div class="carousel-inner" role="listbox" >
+			<div class="item active">
+				<img class="first-slide" src="{%static 'images/marketPicture.jpg' %}" alt="Picture of ..." />
+				{% if not user.is_authenticated %}
 				<div class="carousel-caption">
-				<h1>Join Us Now</h1>
-				<p>blablablablabla</p>
-				<p><a class="btn btn-lg btn-primary" href="{% url 'registration_register' %}" role="button">Sign up today</a></p>
+					<h1>Join Us Now</h1>
+					<p>blablablablabla</p>
+					<p><a class="btn btn-lg btn-primary" href="{% url 'registration_register' %}" role="button">Sign up today</a></p>
 				</div>
-			{% endif %}
+				{% else %}
+				<div class="carousel-caption">
+					<h1>Join the Session Now</h1>
+					<p>blablablablabla</p>
+					<p><a class="btn btn-lg btn-primary" href="{% url 'sessionlist' %}" role="button">Session List</a></p>
+				</div>
+				{% endif %}
+			</div>
+			<div class="item">
+				<img class="second-slide" src="{%static 'images/marketPicture2.jpg' %}" alt="Picture of ..." />
+			</div>
 		</div>
-		<div class="item">
-			<img class="second-slide" src="{%static 'images/marketPicture2.jpg' %}" alt="Picture of ..." />
-		</div>
-			
-		<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
+		<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			<span class="sr-only">Prev</span>
 		</a>
-		<a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 			<span class="sr-only">Next</span>
-		</a>
+		</a>	
 	</div>
 </div>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4">
+			<h2>What We Do</h2>
+			<p>blablablablablablablablablablablablablablablablablabla
+				blablablablablablabla</p>
+		</div>
+		<div class="col-md-4">
+			<h2>How We Do</h2>
+			<p>blablablablablablablablablablablablablablablablablabla
+				blablablablablablabla</p>
+		</div>
+		<div class="col-md-4">
+			<h2>What Members Do</h2>
+			<p>blablablablablablablablablablablablablablablablablabla
+				blablablablablablabla</p>
+		</div>
+	</div>
+</div>	
+
 {% endblock %}
