Here's a big commit - Ive put the test code I made (mostly broken tbh) and I added the sessionlist functionality - we should really look into making the user profile work, as this is really key functionality. Next up, Ill work on making the items list work

--- a/templates/market/sesh.html
+++ b/templates/market/sesh.html
@@ -5,7 +5,7 @@
 	{% if sessions %}
 		{% for sesh in sessions %}
 		<div class="">
-		<strong><li><a href="{% url 'join_session' sesh.slug %}">{{ sesh.name}}</a></li></strong>
+		<strong><li><a href="{% url 'join_session' sesh.slug %}">{{sesh.sessionName}}</a></li></strong>
 		</div>
 		{% endfor %}
 	{% else %}
