--- a/templates/market/viewuser.html
+++ b/templates/market/viewuser.html
@@ -11,6 +11,7 @@
 		<div class="page-header">
 		<h1>That's your market {{ userprofile_object.user.username }}</h1>
 		</div>
+    <div class="col-sm-6">
 
 		<dl>
 			<dt><h3>First Name</h3></dt>
@@ -28,12 +29,9 @@
 			<dt><h2>Date {{userprofile_object.firstName}} Joined</h2></dt>
 			<dd>{{userprofile_object.userStartDate}}</dd>
 		</dl>
-
-    </div>
-
-    <div class="row">
-      <div class="col-sm-3">
-        {% get_your_items {{userprofile_object.userID}} %}
+  </div>
+      <div class="col-sm-6">
+        {% get_your_items userprofile_object.userID %}
       </div>
     </div>
 		{% else %}
