--- a/templates/market/viewuser.html
+++ b/templates/market/viewuser.html
@@ -9,11 +9,10 @@
 		{% if userprofile_object %}
     <div class="row">
 		<div class="page-header">
-		<h1>That's your market {{ userprofile_object.user.username }}</h1>
 		</div>
     <div class="col-sm-6">
-
 		<dl>
+      <h1><em>{{ userprofile_object.user.username }}</em></h1>
 			<dt><h3>First Name</h3></dt>
 			<dd>{{userprofile_object.firstName}}</dd>
 			<dt><h2>Last Name</h2></dt>
@@ -31,6 +30,7 @@
 		</dl>
   </div>
       <div class="col-sm-6">
+        <h1>This user's <em>Inventory</em> </h1>
         {% get_your_items userprofile_object.userID %}
       </div>
     </div>
