--- a/templates/market/viewuser.html
+++ b/templates/market/viewuser.html
@@ -37,7 +37,8 @@
 		{% else %}
 		<strong> This person doesn't exist! Should they? </strong>
 		{% endif %}
-    {% if user_profile.user.is_authenticated %}
+
+    {% if userprofile_object.user.username == user.username %}
     <form method="post" action="." enctype="multipart/form-data">
       {% csrf_token %}
       {{ form.as_p }}
