--- a/templates/market/userProfile.html
+++ b/templates/market/userProfile.html
@@ -2,16 +2,16 @@
 
 {% load staticfiles %}
 
-{% block title %}{{ userprofile_object.user.username }} UserProfile{% endblock %}
+
+{% block title %}{{ selecteduser.username }} UserProfile{% endblock %}
 {% block body_block %}
 
-<h1>{{ userprofile_object.user.username}} Profile</h1>
-<h2></h1>
+<h1>{{selecteduser.username}} Profile</h1>
 
 <br/>
 <div class="row">
-	{% if userprofile_object.user.username == user.username %}
-	<div id="edit_profile" style="float:right;" class="col-sm-3">
+	{% if selecteduser.username == user.username %}
+	<div id="edit_profile" style="float:right;" class="col-sm-4">
 		<div class="col-sm-3">
 		<div class="card container-fluid" style="width: 35rem;">
 			<div class="card-body">
