--- a/templates/market/base.html
+++ b/templates/market/base.html
@@ -17,94 +17,10 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="static/js/scripts/ui.js"></script>
+    <script src="/static/js/scripts/ui.js"></script>
 
 <!-- Link for change navbar:https://work.smarchal.com/twbscolor/3.3.7/css/0063ff0742e2ffffffffffff0 -->
-		<style>
-			.navbar-default {
-			  background-color: #000000;
-			  border-color: #ffffff;
-			}
-			.navbar-default .navbar-brand {
-			  color: #ffffff;
-			}
-			.navbar-default .navbar-brand:hover,
-			.navbar-default .navbar-brand:focus {
-			  color: #000000;
-			}
-			.navbar-default .navbar-text {
-			  color: #ffffff;
-			}
-			.navbar-default .navbar-nav > li > a {
-			  color: #ffffff;
-			}
-			.navbar-default .navbar-nav > li > a.active{
-				color:#000000;
-			}
-			.navbar-default .navbar-nav > li > a:hover,
-			.navbar-default .navbar-nav > li > a:focus {
-			  color: #000000;
-			  background-color:#ffffff;
-			}
-
-			.navbar-default .navbar-nav > .active > a,
-			.navbar-default .navbar-nav > .active > a:hover,
-			.navbar-default .navbar-nav > .active > a:focus {
-			  color: #000000;
-			  background-color: #ffffff;
-			}
-			.navbar-default .navbar-nav > .open > a,
-			.navbar-default .navbar-nav > .open > a:hover,
-			.navbar-default .navbar-nav > .open > a:focus {
-			  color: #000000;
-			  background-color: #ffffff;
-			}
-			.navbar-default .navbar-toggle {
-			  border-color: #ffffff;
-			}
-			.navbar-default .navbar-toggle:hover,
-			.navbar-default .navbar-toggle:focus {
-			  background-color: #ffffff;
-			}
-			.navbar-default .navbar-toggle .icon-bar {
-			  background-color: #ffffff;
-			}
-			.navbar-default .navbar-collapse,
-			.navbar-default .navbar-form {
-			  border-color: #ffffff;
-			}
-			.navbar-default .navbar-link {
-			  color: #ffffff;
-			}
-			.navbar-default .navbar-link:hover {
-			  color: #000000;
-			}
-
-			@media (max-width: 767px) {
-			  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-				color: #ffffff;
-			  }
-			  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
-			  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-				color: #000000;
-			  }
-			  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
-			  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
-			  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-				color: #000000;
-				background-color: #ffffff;
-			  }
-			}
-
-			.active{
-
-				background-color:#ffffff;
-				color:#000000;
-			}
-			body{
-				background-image: linear-gradient(to bottom right, white, #000000);
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
     </head>
 
     <body>
