--- a/templates/market/show_session.html
+++ b/templates/market/show_session.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body_block %}
-<div class="jumbotron">
+<div class="jumbotron container-fluid">
 {% get_all_items session_object.sessionID %}
 </div>
 {% endblock %}
