--- a/templates/market/sessionlist.html
+++ b/templates/market/sessionlist.html
@@ -5,7 +5,7 @@ MarketDays Sessions
 {% endblock %}
 
 {% block body_block %}
-<div class="jumbotron">
+<div class="jumbotron container-fluid">
 {% get_session_list %}
 </div>
 {% endblock %}
