--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,19 @@
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
+#session-card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 20%;
+  margin-left: 2%;
+  background-color:#d1fff6;
+  float:left;
+}
+
+#session-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
 .navbar-default {
   background-color: #000000;
   border-color: #ffffff;
