--- a/templates/market/items.html
+++ b/templates/market/items.html
@@ -8,52 +8,37 @@
 <!-- the following is the LHS of haggle view  + your inventory view-->
 	{% if yourtradable %}
 		{% for item in yourtradable %}
-    <div class="row">
-    <div class="col-sm-3">
-    <div class="card container-fluid" style="width: 35rem; background:green;">
-      <img class="card-img-top img-thumbnail" src="{{item.picture.url}}" alt="Image of {{item.itemName}}" height="300" width="300">
-      <div class="card-header">
-        <h3 class="card-title">{{item.itemName}}</h3>
-      </div>
-      <div class="card-body">
-        <p class="card-text" style="font-size:15px;">{{item.itemDescription}}</p>
-        <p><small class="text-muted">Posted {{item.itemDatePosted}}</small></p>
-      </div>
-    </div>
-    </div>
+    <div id="offer-card" class="ui-widget-content" style="background-color:#50f456;">
+			<a href="{% url 'begin_haggle' item.itemID %}"><img class="card-img-top img-thumbnail" src="{{item.picture.url}}" alt="Image of {{item.itemName}}" height="300" width="300"></a>
+			<h3 class="card-title">{{item.itemName}}</h3>
+			<p style="font-size:15px;">{{item.itemDescription}}</p>
+      <p><small class="text-muted">Posted {{item.itemDatePosted}}</small></p>
+		  <strong><a href="{% url 'begin_haggle' item.itemID %}" class="btn btn-primary">Make Offer</a></strong>
     </div>
 		{% endfor %}
 	{% endif %}
 <!-- this is for your inventory view only -->
   {% if yournontradable %}
 		{% for item in yournontradable %}
-    <div class="row">
-		<div class="col-sm-3">
-		<div class="card container-fluid" style="width: 35rem; background:red;">
+    <div id="offer-card" class="ui-widget-content" style="background-color:#f46650;">
 			<img class="card-img-top img-thumbnail" src="{{item.picture.url}}" alt="Image of {{item.itemName}}" height="300" width="300">
-			<div class="card-header">
-				<h3 class="card-title">{{item.itemName}}</h3>
-			</div>
-			<div class="card-body">
-				<p class="card-text" style="font-size:15px;">{{item.itemDescription}}</p>
-        <p><small class="text-muted">Posted {{item.itemDatePosted}}</small></p>
-			</div>
-		</div>
-		</div>
-		</div>
+			<h3 class="card-title">{{item.itemName}}</h3>
+			<p style="font-size:15px;">{{item.itemDescription}}</p>
+      <p><small class="text-muted">Posted {{item.itemDatePosted}}</small></p>
+    </div>
 		{% endfor %}
 	{% endif %}
 <!-- the following is for the session view, showing all the items in the session -->
   {% if sessionitems %}
 		{% for item in sessionitems %} <!--The following is an item card meant to take you to the haggle view -->
 
-    
+
     <div id="offer-card" class="ui-widget-content">
-			<a href="{% url 'begin_haggle' %}"><img class="card-img-top img-thumbnail" src="{{item.picture.url}}" alt="Image of {{item.itemName}}" height="300" width="300"></a>
+			<a href="{% url 'begin_haggle' item.itemID %}"><img class="card-img-top img-thumbnail" src="{{item.picture.url}}" alt="Image of {{item.itemName}}" height="300" width="300"></a>
 			<h3 class="card-title">{{item.itemName}}</h3>
 			<p style="font-size:15px;">{{item.itemDescription}}</p>
       <p><small class="text-muted">Posted {{item.itemDatePosted}}</small></p>
-		  <strong><a href="{% url 'begin_haggle' %}" class="btn btn-primary">Make Offer</a></strong>
+		  <strong><a href="{% url 'begin_haggle' item.itemID %}" class="btn btn-primary">Make Offer</a></strong>
     </div>
 
 
