--- a/templates/market/base.html
+++ b/templates/market/base.html
@@ -13,10 +13,14 @@
         </title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--import bootstrap -Walter -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!--import jquery with jquery ui and theme -->
+    <link rel="stylesheet" href="/static/js/res/jquery-ui.min.css">
+    <script src="/static/js/res/external/jquery/jquery.js"></script>
+    <script src="/static/js/res/jquery-ui.min.js"></script>
+		<!-- import custom js code for application -->
     <script src="/static/js/scripts/ui.js"></script>
 
 <!-- Link for change navbar:https://work.smarchal.com/twbscolor/3.3.7/css/0063ff0742e2ffffffffffff0 -->
