--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,7 @@
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-#session-card {
+.session-card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 20%;
@@ -20,8 +20,12 @@
   float:left;
 }
 
-#session-card:hover {
+.session-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card-photo{
+  width: 200px;
 }
 
 .navbar-default {
