--- a/templates/market/viewuser.html
+++ b/templates/market/viewuser.html
@@ -11,6 +11,7 @@
 		<div class="page-header">
 		</div>
     <div class="col-sm-3">
+		<img class="img-thumbnail" src="{{userprofile_object.picture.url}}">
 		<dl>
       <h1><em>{{ userprofile_object.user.username }}</em></h1>
 			<dt><h3>First Name</h3></dt>
