Added a preliminary haggle view - Im currently trying to get the make offer functionality to be operational

--- a/templates/market/show_notifications.html
+++ b/templates/market/show_notifications.html
@@ -6,8 +6,5 @@
 {% endblock %}
 
 {% block body_block %}
-	<h1>Show Notifications</h1>
-	<div>
-		LOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOL
-	</div>
+	{% get_offers current_user_object.userID %}
 {% endblock %}
