--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,18 @@
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
+.trading-card{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 50%;
+  margin:2%;
+  background-color:#effbff;
+}
+.trading-card:hover{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  background-color:#c9e0e8;
+}
+
 .session-card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
