--- a/templates/market/base.html
+++ b/templates/market/base.html
@@ -22,6 +22,9 @@
     <script src="/static/js/res/jquery-ui.min.js"></script>
 		<!-- import custom js code for application -->
     <script src="/static/js/scripts/ui.js"></script>
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js">
+    </script>
 
 <!-- Link for change navbar:https://work.smarchal.com/twbscolor/3.3.7/css/0063ff0742e2ffffffffffff0 -->
 		<link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
