--- a/templates/market/offer_snip.html
+++ b/templates/market/offer_snip.html
@@ -1,31 +1,45 @@
+    <!-- Page Content -->
+    <div class="container">
 
-<div class="col-sm-6" >
-<div id="session-card" class="card container-fluid" style="width: 90rem; float:left;">
-  {% if yourOffers %}
-    Your offers	{{ user.username }}
-    <br/>
-		{% for offer in yourOffers %}
-    <div id="offer-card" class="ui-widget-content" style="background-color:#f46650;">
-			<h3 class="offer-name">{{offer.message}}</h3>
-      <p><small class="text-muted">Posted {{offer.offerTimeStamp}}</small></p>
-    </div>
-		{% endfor %}
-	{% endif %}
-</div>
-</div>
+        <!-- Page Header -->
+        <div class="row">
+            <div class="col-lg-12">
+
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+
+        {% if yourOffers %}
+          Your offers	{{ user.username }}
+          <br/>
+          {% for offer in yourOffers %}
+          <div class="row">
+            <div class="col-md-6 portfolio-item">
+          <div id="offer-card" class="ui-widget-content" style="background-color:#f46650;">
+            <h3 class="offer-name">{{offer.message}}</h3>
+            <p><small class="text-muted">Posted {{offer.offerTimeStamp}}</small></p>
+            <strong><a href="{% url 'delete_offer' offer.offerID %}" class="btn btn-primary">Delete Offer</a></strong>
+          </div>
+            </div>
+          </div>
+          {% endfor %}
+        {% endif %}
 
 
-<div class="col-sm-6" >
-<div id="session-card" class="card container-fluid" style="width: 90rem; float:right;">
-  {% if toYouOffers %}
-  	To you offers	{{ user.username }}
-    <br/>
-    {% for offer in toYouOffers %}
-    <div id="offer-card" class="ui-widget-content" style="background-color:#50f452;">
-      <h3 class="offer-name">{{offer.message}}</h3>
-      <p><small class="text-muted">Posted {{offer.offerTimeStamp}}</small></p>
-    </div>
-    {% endfor %}
-  {% endif %}
-</div>
-</div>
+        {% if toYouOffers %}
+          To you offers	{{ user.username }}
+          <br/>
+          {% for offer in toYouOffers %}
+          <div class="row">
+              <div class="col-md-6 portfolio-item">
+            <div id="offer-card" class="ui-widget-content" style="background-color:#50f452;">
+              <h3 class="offer-name">{{offer.message}}</h3>
+              <p><small class="text-muted">Posted {{offer.offerTimeStamp}}</small></p>
+              <strong><a href="{% url 'delete_offer' offer.offerID %}" class="btn btn-primary">Delete Offer</a></strong>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+        {% endif %}
