--- a/templates/market/base.html
+++ b/templates/market/base.html
@@ -15,13 +15,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
     <!--import bootstrap -Walter -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!--import jquery with jquery ui and theme -->
     <link rel="stylesheet" href="/static/js/res/jquery-ui.min.css">
     <script src="/static/js/res/external/jquery/jquery.js"></script>
     <script src="/static/js/res/jquery-ui.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<!-- import custom js code for application -->
-    <script src="/static/js/scripts/ui.js"></script>
+    <!--<script src="/static/js/scripts/ui.js"></script>-->
 
 <!-- Link for change navbar:https://work.smarchal.com/twbscolor/3.3.7/css/0063ff0742e2ffffffffffff0 -->
 		<link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
